LENLS: Changed the title

--- a/lenls/abstract.tex
+++ b/lenls/abstract.tex
@@ -28,7 +28,7 @@
 
 \begin{document}
 
-\title{Towards a Wide-Coverage Grammar: \\ Graphical Abstract Categorial Grammars}
+\title{An Integration of Multiple Constraints in ACG}
 \author{Jiří Maršík \and Maxime Amblard}
 \maketitle
 
