--- a/lenls/abstract.tex
+++ b/lenls/abstract.tex
@@ -41,6 +41,7 @@
   abstract categorial grammars.
 \end{abstract}
 
+
 \section{Motivation}
 
 Abstract categorial grammars (ACGs) have shown to be a viable formalism
@@ -79,93 +80,11 @@ the problem.
     \centering
     \includegraphics[height=0.2\textheight]{../diagrams/parallel-over-serial.pdf}
     \caption{\label{fig:acg-comp-sem} Distinguishing syntactic and
-      semantic ambiguities..}
+      semantic ambiguities.}
   \end{subfigure}
   \caption{\label{fig:acg-comp} Diagrams of systems of ACGs.}
 \end{figure*}
 
-
-\section{The Problem of Multiple Constraints}
-\label{sec:constraints}
-
-We will consider several linguistic constraints that have been given
-formal treatments in grammatical formalisms.
-
-In French, negation is signalled by prepending the particle \emph{ne} to
-the negated verb in conjunction with using a properly placed
-accompanying word, such as a negative determiner in one of the verb's
-arguments. This phenomenon has been elegantly formalized in the Frigram
-interaction grammar \cite{perrier2007french}.
-
-\begin{exe}
-  \ex \label{ex:aucun-shallow} Jean \textbf{ne} parle à \textbf{aucun} collègue. \\
-      (Jean speaks to no colleague.)
-  \ex \label{ex:aucun-deep-obj} Jean \textbf{ne} parle à la femme d'\textbf{aucun} collègue. \\
-      (Jean speaks to the wife of no colleague.)
-  \ex \label{ex:aucun-deep-subj} \textbf{Aucun} collègue de Jean \textbf{ne} parle à sa femme. \\
-      (No colleague of Jean's speaks to his wife.)
-\end{exe}
-
-We see here that the negative determiner \emph{aucun} can be present in
-the subject or the object of the negated verb and it can modify the
-argument directly or be attached to one of its complements. Furthermore,
-we note that omitting either the word \emph{ne} or the word \emph{aucun}
-while keeping the other produces a sentence which is considered
-ungrammatical.
-
-This difference in syntactic behavior between noun phrases that contain
-a negative determiner and those that do not has implications for our
-grammar. Since two terms having an identical type in an ACG signature
-can be freely interchanged in any sentence, we are forced to assign two
-different types to these two different kinds of noun phrases.
-
-% NOTE: We could use a single constant for the two paired words.
-% NOTE: We could use a higher-order type for the negative determiner
-% which demands the negative particle itself.
-
-This leads us to a grammar in which we subdivide the atomic types $N$
-and $NP$ into subtypes that reflect whether or not they contain a
-negative determiner inside. Types of the other constants, such as the
-preposition \emph{de} seen in (\ref{ex:aucun-deep-obj}) and
-(\ref{ex:aucun-deep-subj}), will constrain their arguments to have
-compatible features on their types and will propagate the information
-carried in the features to its result type, e.g.:
-
-\begin{align*}
-N_{de_1} &: NP\_NEG{=}F \limp N\_NEG{=}F \limp N\_NEG{=}F \\
-N_{de_2} &: NP\_NEG{=}F \limp N\_NEG{=}T \limp N\_NEG{=}T \\
-N_{de_3} &: NP\_NEG{=}T \limp N\_NEG{=}F \limp N\_NEG{=}T
-\end{align*}
-
-Enforcing other constraints leads us to subdivide our ``atomic'' types
-even further (e.g. the authors of \cite{pogodalla2012controlling} add
-features to the $S$ and $NP$ types to implement constraints about
-extraction). Other phenomena, such as agreement on morphological
-properties like number, gender, person or case, intuitively lead us to
-make our types even more specific.
-
-If we were to use this approach to write a grammar that enforces
-multiple constraints at the same time, we would end up with complicated
-types like the one below which provide complete specifications of the
-various possible situations.
-
-\begin{align*}
-C_{de_{11}} :\ &(NP\_\textcolor{red}{NEG{=}T}\_\textcolor{green}{VAR{=}F}\_\textcolor{blue}{NUM{=}PL}) \\
-&\limp (N\_\textcolor{red}{NEG{=}F}\_\textcolor{blue}{NUM{=}SG}) \\
-&\limp (N\_\textcolor{red}{NEG{=}T}\_\textcolor{blue}{NUM{=}SG})
-\end{align*}
-
-This creates two problems. Firstly, the number of such types grows
-exponentially with the number of features added. This can be fixed by
-introducing dependent types into the type system as in
-\cite{de2007type}. Secondly, and perhaps more importantly, we have lost
-the clarity and simplicity of describing the individual phenomena
-independently. This makes adding new constraints more and more
-cumbersome and reduces our capability to reason about our grammar. It no
-longer becomes apparent which language mechanisms behave independently
-and their interactions are hard to track. We firmly believe that
-simplicity is a fundamental requirement for constructing a large and
-robust grammar and our proposal aims to reclaim that simplicity.
 
 \section{Systems of ACGs}
 \label{sec:acg-comp}
@@ -197,18 +116,103 @@ $\Sigma_{Syntax}$ and $\Sigma_{SyntSem}$, in order to model syntactic
 and semantic ambiguities in different grammars
 \cite{pogodalla2007generalizing}.
 
-In our grammar, we would like to combine both of the patterns on
-Figures~\ref{fig:acg-comp-constr} and \ref{fig:acg-comp-sem} and
-furthermore, to use the pattern of Figure~\ref{fig:acg-comp-constr}
-multiple times to implement multiple constraints independently. However,
-these combinations are not possible in the framework of ACGs without
-introducing complexity such as contaminating the syntax-semantics
-interface by the implementation details of the syntactic layer.
 
-We would like to have a system which would be characterized by a diagram
-like the one on Figure~\ref{fig:gacg}. However, ACG diagrams are limited
-to arborescences and we are obliged to generalize the formalism in order
-to get the expected interpretation of Figure~\ref{fig:gacg}.
+\section{The Problem of Multiple Constraints}
+\label{sec:constraints}
+
+We will consider several linguistic constraints that have been given
+formal treatments in grammatical formalisms.
+
+In French, negation is signalled by prepending the particle \emph{ne} to
+the negated verb in conjunction with using a properly placed
+accompanying word, such as a negative determiner in one of the verb's
+arguments. This phenomenon has been elegantly formalized in the Frigram
+interaction grammar \cite{perrier2007french}.
+
+\begin{exe}
+  \ex \label{ex:aucun-shallow} Jean \textbf{ne} parle à \textbf{aucun} collègue. \\
+      (Jean speaks to no colleague.)
+  \ex \label{ex:aucun-deep-obj} Jean \textbf{ne} parle à la femme d'\textbf{aucun} collègue. \\
+      (Jean speaks to the wife of no colleague.)
+  \ex \label{ex:aucun-deep-subj} \textbf{Aucun} collègue de Jean \textbf{ne} parle à sa femme. \\
+      (No colleague of Jean's speaks to his wife.)
+\end{exe}
+
+We see here that the negative determiner \emph{aucun} can be present in
+the subject or the object of the negated verb and it can modify the
+argument directly or be attached to one of its complements. Furthermore,
+we note that omitting either the word \emph{ne} or the word \emph{aucun}
+while keeping the other produces a sentence which is considered
+ungrammatical.
+
+This difference in syntactic behavior between noun phrases that contain a
+negative determiner and those that do not has implications for our
+grammar. Since two terms that have an identical type in an ACG signature can
+be freely interchanged in any sentence, we are forced to assign two different
+types to these two different kinds of noun phrases.
+
+% NOTE: We could use a single constant for the two paired words.
+% NOTE: We could use a higher-order type for the negative determiner
+% which demands the negative particle itself.
+
+This leads us to a grammar in which we subdivide the atomic types $N$
+and $NP$ into subtypes that reflect whether or not they contain a
+negative determiner inside. Types of the other constants, such as the
+preposition \emph{de} seen in (\ref{ex:aucun-deep-obj}) and
+(\ref{ex:aucun-deep-subj}), will constrain their arguments to have
+compatible features on their types and will propagate the information
+carried in the features to its result type, e.g.:
+
+\begin{align*}
+N_{de_1} &: NP\_NEG{=}F \limp N\_NEG{=}F \limp N\_NEG{=}F \\
+N_{de_2} &: NP\_NEG{=}F \limp N\_NEG{=}T \limp N\_NEG{=}T \\
+N_{de_3} &: NP\_NEG{=}T \limp N\_NEG{=}F \limp N\_NEG{=}T
+\end{align*}
+
+Enforcing other constraints leads us to subdivide our ``atomic'' types
+even further (e.g. the authors of \cite{pogodalla2012controlling} add
+features to the $S$ and $NP$ types to implement constraints about
+extraction). Other phenomena, such as agreement on morphological
+properties like number, gender, person or case, intuitively lead us to
+make our types even more specific.
+
+If we were to use this approach to write a grammar that enforces multiple
+constraints at the same time, we would end up with complicated types, like the
+one below, which provide complete specifications of the various possible
+situations.
+
+\begin{align*}
+C_{de_{11}} :\ &(NP\_\textcolor{red}{NEG{=}T}\_\textcolor{green}{VAR{=}F}\_\textcolor{blue}{NUM{=}PL}) \\
+&\limp (N\_\textcolor{red}{NEG{=}F}\_\textcolor{blue}{NUM{=}SG}) \\
+&\limp (N\_\textcolor{red}{NEG{=}T}\_\textcolor{blue}{NUM{=}SG})
+\end{align*}
+
+This creates two problems. Firstly, the number of such types grows
+exponentially with the number of features added. This can be fixed by
+introducing dependent types into the type system as in
+\cite{de2007type}. However, secondly, and perhaps more importantly, we have
+lost the clarity and simplicity of describing the individual phenomena
+independently. This makes adding new constraints more and more cumbersome and
+reduces our capability to reason about our grammar. It no longer becomes
+apparent which language mechanisms behave independently and their interactions
+are hard to track. We firmly believe that simplicity is a fundamental
+requirement for constructing a large and robust grammar and our proposal aims
+to reclaim that simplicity.
+
+In our grammar, we would like to combine several constraints
+(Figure~\ref{fig:acg-comp-constr}) and possibly to also separate the syntactic
+ambiguities from the purely semantic ones (Figure~\ref{fig:acg-comp-sem}).
+However, these combinations are not possible in the framework of ACGs without
+introducing complexity by solving all the constraints in one single type
+signature (the consequences of we saw above) or contaminating the
+syntax-semantics interface by the implementation details of the syntactic
+layer.
+
+We would like to have a system which would be characterized by a diagram like
+the one on Figure~\ref{fig:gacg}. However, ACG diagrams are limited to
+arborescences and we are obliged to generalize the formalism in order to get
+the expected interpretation of Figure~\ref{fig:gacg}.
+
 
 \section{Graphical ACGs}
 
