First draft of a Conclusion

--- a/lenls/abstract.tex
+++ b/lenls/abstract.tex
@@ -345,6 +345,15 @@ they are defined in papers which try to formalize them individually
 freely combine both the constraint pattern and the syntax-semantics
 ambiguities pattern from Section~\ref{sec:acg-comp}.
 
+
+\section{Conclusion}
+
+We have considered the problem of building a wide-coverage ACG, specifically
+the problem of expressing a multitude of linguistic constraints. We have
+examined previous techniques and found no satisfying solution. We have thus
+provided an extension of the ACG formalism to solve the problem and justified
+the need for the increased expressivity.
+
 \bibliographystyle{plain}
 \bibliography{../biblio}
 
