Some small refactoring...

--- a/lenls/abstract.tex
+++ b/lenls/abstract.tex
@@ -269,10 +269,10 @@ $$
 $$
 
 G-ACG extrinsic languages correspond to ACG object languages with
-intersection. More formally, it can be said that ACG object languages
-are just ACG abstract languages closed on transformation by a lexicon
-and we then show that G-ACG extrinsic languages are just ACG abstract
-languages closed on transformation by a lexicon and intersection.
+intersection. More formally, it can be said that ACG object languages are just
+ACG abstract languages closed on transformation by a lexicon, and we then show
+that G-ACG extrinsic languages are just ACG abstract languages closed on
+transformation by a lexicon and intersection.
 
 $$
 \mathcal{O} = \mathcal{A}^{\mathcal{L}}
@@ -287,13 +287,14 @@ constraints. Furthermore, from the above we can see that object
 languages are as expressive as extrinsic languages iff object languages
 are closed on intersection, which is conjectured to be false.
 
-However, extrinsic languages turn out to give counter-intuitive
-interpretations to some graphical ACGs and we turn to another paradigm.
+However, the extrinsic languages we have defined above turn out to give
+counter-intuitive interpretations to some graphical ACGs and we revisit the
+question in an another paradigm.
 
-In the new paradigm, we interpret the nodes of the graph as terms and
-the edges with statements that one term is mapped into another using a
-lexicon. This leads us to the definition of the \emph{pangraphical}
-language of a node $u$ in a G-ACG $\mathcal{G}$.
+In the new paradigm, we interpret the nodes of the graph as terms and the
+edges as statements that one term is mapped into another using a lexicon. This
+leads us to the definition of the \emph{pangraphical} language of a node $u$
+in a G-ACG $\mathcal{G}$.
 
 A term $t$ belongs to $\mathcal{P}_{\mathcal{G}}(u)$ whenever there
 exists a labeling $T$ of the nodes of the graph such that:
@@ -335,7 +336,7 @@ negation constraint is implemented exactly as was described in
 Section~\ref{sec:constraints} and the extraction constraints are taken
 ``as is'' from \cite{pogodalla2012controlling}. The underlying syntactic
 signature is defined without any concern for the additional constraints
-and the syntax-semantics signature is kept simple as well.
+and the syntax-semantics interface is kept simple as well.
 
 In the end, this lets us define the syntax in a clean way using the
 idiomatic style of categorial grammars (simple atomic types like $N$,
